Added functionality that allows to add multiple mappers to MappingWrapper: 1. Edited type of MappingWrapper annotation field mapper() from Class<> to array of classes. Now this annotation can take several mappers. Edited MappingWrapperAnnotationDetails, MappingWrapperClassCode, MappingWrapperClassCodeBuilderImpl, MappingWrapperClassDetails, MappingWrapperClassParser, MappingWrapperMethodCodeGenerator, MappingWrapperMethodCodeGeneratorImpl, MappingWrapperServiceImpl classes to contains mapper's list; 2. Added to MappingWrapperAnnotationServiceImpl the creation of TypeElements representing mappers. Also added a check for their nullability;  3. Added getVariableName() method to ClassUtil for generate variable names for all mappers;  4. A special class MappingMethodDetails has been added, which includes all the values from MethodSignature but also has a variableName field. It is used in the MapperWrapperMethodCodeBuilderImpl class for named mapper fields;  5. Added mapper which convert ClassDetails and variable name to collectioin of MappingMethodDetails;
Added all DI modules and components for new MappingWrapper functionality.

Made delete() method transactional. This is necessary to ensure that during the deletion procedure, no one can access the data.

Deleted returnVoidObject() method because to another way all generics Void return type